[tool.poetry]
name = "local-llm"
version = "0.1.0"
description = ""
authors = ["DrDavidL <92898146+DrDavidL@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, < 3.12"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
